Add initial html structure and content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,123 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-  
+    <div id="sidebar">
+      <div id="dashboard">
+
+      </div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Profile</li>
+          <li>Messages</li>
+          <li>History</li>
+          <li>Tasks</li>
+          <li>Communities</li>
+        </ul>
+        <ul>
+          <li>Settings</li>
+          <li>Support</li>
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </div>
+    <div id="topbar">
+      <search>
+        <input type="search" id="search">
+      </search>
+      <figure id="profile">
+        <img src="" alt="profile picture">
+        <figcaption>Morgan Oakley</figcaption>
+      </figure>
+      <figure>
+        <img src="" alt="profile picture">
+        <figcaption>Hi there,</figcaption>
+        <figcaption>Morgan Oakley (@morgan)</figcaption>
+      </figure>
+      <div id="buttons">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
+    </div>
+    <main>
+      <div id="projectList">
+        <h3>Your projects</h3>
+        <div id="project1" class="project">
+          <h4>Super Cool Project</h4>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+        </div>
+        <div id="project2" class="project">
+          <h4>Less Cool Project</h4>
+          <p>Nullam Condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+        </div>
+        <div id="project3" class="project">
+          <h4>Impossible App</h4>
+          <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+        </div>
+        <div id="project1" class="project">
+          <h4>Easy Peasy App</h4>
+          <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+        </div>
+        <div id="project2" class="project">
+          <h4>Ad Blocker</h4>
+          <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+        </div>
+        <div id="project3" class="project">
+          <h4>Money Maker</h4>
+          <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+        </div>
+      </div>
+      <div id="announcements">
+        <h3>Announcements</h3>
+        <div id="announcementsContainer">
+          <div class="announcement">
+            <h4>Site Maintenance</h4>
+            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue.</p>
+          </div>
+          <div class="announcement">
+            <h4>Community Share Day</h4>
+            <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor..</p>
+          </div>
+          <div class="announcement">
+            <h4>Updated Privacy Policy</h4>
+            <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+          </div>
+        </div>
+      </div>
+      <div id="trending">
+        <h3>Trending</h3>
+        <div id="trendingContainer">
+          <div id="profilePage1" class="profilePage">
+            <figure>
+              <img src="" alt="">
+              <figcaption class="profileName">@tegan</figcaption>
+              <figcaption>World Peace Builder</figcaption>
+            </figure>
+          </div>
+          <div id="profilePage2" class="profilePage">
+            <figure>
+              <img src="" alt="">
+              <figcaption class="profileName">@morgan</figcaption>
+              <figcaption>Super Cool Project</figcaption>
+            </figure>
+          </div>
+          <div id="profilePage3" class="profilePage">
+            <figure>
+              <img src="" alt="">
+              <figcaption class="profileName">@kendall</figcaption>
+              <figcaption>Life Changing App</figcaption>
+            </figure>
+          </div>
+          <div id="profilePage4" class="profilePage">
+            <figure>
+              <img src="" alt="">
+              <figcaption class="profileName">@alex</figcaption>
+              <figcaption>No Traffic Maker</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
