Add CSS-Grid layout for the page

--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
   <body>
     <div id="sidebar">
       <div id="dashboard">
-
+        <h1>Dashboard</h1>
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+          </ul>
+          <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
-        </ul>
-        <ul>
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
-        </ul>
-      </nav>
     </div>
     <div id="topbar">
       <search>
         <input type="search" id="search">
       </search>
       <figure id="profile">
-        <img src="" alt="profile picture">
+        <img src="">
         <figcaption>Morgan Oakley</figcaption>
       </figure>
-      <figure>
-        <img src="" alt="profile picture">
+      <figure id="greeting">
+        <img src="">
         <figcaption>Hi there,</figcaption>
         <figcaption>Morgan Oakley (@morgan)</figcaption>
       </figure>
@@ -49,29 +49,31 @@
     <main>
       <div id="projectList">
         <h3>Your projects</h3>
-        <div id="project1" class="project">
-          <h4>Super Cool Project</h4>
-          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
-        </div>
-        <div id="project2" class="project">
-          <h4>Less Cool Project</h4>
-          <p>Nullam Condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
-        </div>
-        <div id="project3" class="project">
-          <h4>Impossible App</h4>
-          <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
-        </div>
-        <div id="project1" class="project">
-          <h4>Easy Peasy App</h4>
-          <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
-        </div>
-        <div id="project2" class="project">
-          <h4>Ad Blocker</h4>
-          <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
-        </div>
-        <div id="project3" class="project">
-          <h4>Money Maker</h4>
-          <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+        <div id="projectsContainer">
+          <div id="project1" class="project">
+            <h4>Super Cool Project</h4>
+            <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+          </div>
+          <div id="project2" class="project">
+            <h4>Less Cool Project</h4>
+            <p>Nullam Condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+          </div>
+          <div id="project3" class="project">
+            <h4>Impossible App</h4>
+            <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+          </div>
+          <div id="project1" class="project">
+            <h4>Easy Peasy App</h4>
+            <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+          </div>
+          <div id="project2" class="project">
+            <h4>Ad Blocker</h4>
+            <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+          </div>
+          <div id="project3" class="project">
+            <h4>Money Maker</h4>
+            <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+          </div>
         </div>
       </div>
       <div id="announcements">
