Add icons to the dashboard

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
   <body>
     <div id="sidebar">
       <div id="dashboard">
-        <h1>Dashboard</h1>
+        <div class="iconContainer">
+          <img src="assets/icons/dashboard.svg" alt="dashboard">
+          <h1>Dashboard</h1>
+        </div>
         <nav>
           <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
+            <li><img src="assets/icons/home.svg" alt="home">Home</li>
+            <li><img src="assets/icons/account-cowboy-hat.svg" alt="profile">Profile</li>
+            <li><img src="assets/icons/message.svg" alt="">Messages</li>
+            <li><img src="assets/icons/history.svg" alt="">History</li>
+            <li><img src="assets/icons/note-multiple.svg" alt="">Tasks</li>
+            <li><img src="assets/icons/account-group.svg" alt="">Communities</li>
           </ul>
           <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
+            <li><img src="assets/icons/cog.svg" alt="">Settings</li>
+            <li><img src="assets/icons/help-box.svg" alt="">Support</li>
+            <li><img src="assets/icons/shield-check.svg" alt="">Privacy</li>
           </ul>
         </nav>
       </div>
