Style the topbar, add profile picture, change name to my real one.

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
         <input type="search" id="search">
       </search>
       <figure id="profile">
-        <img src="">
-        <figcaption>Morgan Oakley</figcaption>
+        <div id="profilePictureContainer">
+          <img src="assets/profile-picture.gif">
+        </div>
+        <figcaption>Arthur Bais</figcaption>
       </figure>
       <figure id="greeting">
-        <img src="">
-        <figcaption>Hi there,</figcaption>
-        <figcaption>Morgan Oakley (@morgan)</figcaption>
+        <div id="greetingPictureContainer">
+          <img src="assets/profile-picture.gif">
+        </div>
+        <figcaption id="greetingText">Hi there,</figcaption>
+        <figcaption id="greetingName">Arthur Bais (@arthur)</figcaption>
       </figure>
       <div id="buttons">
         <button>New</button>
