Add icons to topbar

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     </div>
     <div id="topbar">
       <search>
+        <img src="assets/icons/magnify.svg" alt="search">
         <input type="search" id="search">
       </search>
       <figure id="profile">
+        <img src="assets/icons/bell-outline.svg" alt="bell">
         <div id="profilePictureContainer">
           <img src="assets/profile-picture.gif">
         </div>
