Add main section styling

--- a/index.html
+++ b/index.html
@@ -92,10 +92,12 @@
             <h4>Site Maintenance</h4>
             <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue.</p>
           </div>
+          <hr>
           <div class="announcement">
             <h4>Community Share Day</h4>
             <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor..</p>
           </div>
+          <hr>
           <div class="announcement">
             <h4>Updated Privacy Policy</h4>
             <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
@@ -107,30 +109,30 @@
         <div id="trendingContainer">
           <div id="profilePage1" class="profilePage">
             <figure>
-              <img src="" alt="">
+              <img src="assets/sample.png" alt="">
               <figcaption class="profileName">@tegan</figcaption>
-              <figcaption>World Peace Builder</figcaption>
+              <figcaption class="profileDescription">World Peace Builder</figcaption>
             </figure>
           </div>
           <div id="profilePage2" class="profilePage">
             <figure>
-              <img src="" alt="">
+              <img src="assets/sample.png" alt="">
               <figcaption class="profileName">@morgan</figcaption>
-              <figcaption>Super Cool Project</figcaption>
+              <figcaption class="profileDescription">Super Cool Project</figcaption>
             </figure>
           </div>
           <div id="profilePage3" class="profilePage">
             <figure>
-              <img src="" alt="">
+              <img src="assets/sample.png" alt="">
               <figcaption class="profileName">@kendall</figcaption>
-              <figcaption>Life Changing App</figcaption>
+              <figcaption class="profileDescription">Life Changing App</figcaption>
             </figure>
           </div>
           <div id="profilePage4" class="profilePage">
             <figure>
-              <img src="" alt="">
+              <img src="assets/sample.png" alt="">
               <figcaption class="profileName">@alex</figcaption>
-              <figcaption>No Traffic Maker</figcaption>
+              <figcaption class="profileDescription">No Traffic Maker</figcaption>
             </figure>
           </div>
         </div>
