Add icons to projects

--- a/index.html
+++ b/index.html
@@ -62,26 +62,56 @@
           <div id="project1" class="project">
             <h4>Super Cool Project</h4>
             <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+            <div class="projectIconsContainer">
+              <img src="assets/icons/star-plus-outline.svg" alt="star">
+              <img src="assets/icons/eye-plus-outline.svg" alt="eye">
+              <img src="assets/icons/github.svg" alt="github logo">
+            </div>
           </div>
           <div id="project2" class="project">
             <h4>Less Cool Project</h4>
             <p>Nullam Condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+            <div class="projectIconsContainer">
+              <img src="assets/icons/star-plus-outline.svg" alt="star">
+              <img src="assets/icons/eye-plus-outline.svg" alt="eye">
+              <img src="assets/icons/github.svg" alt="github logo">
+            </div>
           </div>
           <div id="project3" class="project">
             <h4>Impossible App</h4>
             <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+            <div class="projectIconsContainer">
+              <img src="assets/icons/star-plus-outline.svg" alt="star">
+              <img src="assets/icons/eye-plus-outline.svg" alt="eye">
+              <img src="assets/icons/github.svg" alt="github logo">
+            </div>
           </div>
           <div id="project1" class="project">
             <h4>Easy Peasy App</h4>
             <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+            <div class="projectIconsContainer">
+              <img src="assets/icons/star-plus-outline.svg" alt="star">
+              <img src="assets/icons/eye-plus-outline.svg" alt="eye">
+              <img src="assets/icons/github.svg" alt="github logo">
+            </div>
           </div>
           <div id="project2" class="project">
             <h4>Ad Blocker</h4>
             <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+            <div class="projectIconsContainer">
+              <img src="assets/icons/star-plus-outline.svg" alt="star">
+              <img src="assets/icons/eye-plus-outline.svg" alt="eye">
+              <img src="assets/icons/github.svg" alt="github logo">
+            </div>
           </div>
           <div id="project3" class="project">
             <h4>Money Maker</h4>
             <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+            <div class="projectIconsContainer">
+              <img src="assets/icons/star-plus-outline.svg" alt="star">
+              <img src="assets/icons/eye-plus-outline.svg" alt="eye">
+              <img src="assets/icons/github.svg" alt="github logo">
+            </div>
           </div>
         </div>
       </div>
